deployment/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: stock
spec:
  hosts:
  - stock
  http:
  - route:
    - destination:
        host: stock
        subset: v1
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: stock
spec:
  host: stock
  subsets:
  - name: v1
    labels:
      version: v1
---
